window: properly propagate keys to the page

Sometimes Epiphany wrongly steals the keyboard events
when they were supposed to be handled by the web view.
This is very clear on text editor pages such as Google
Drive's documents, where we can't set e.g. bold text
using Ctrl + B shortcut.

Fix that by trying to propagate events with the form of
(Ctrl|Alt|Shift)+letter to the focused widget.

https://bugzilla.gnome.org/show_bug.cgi?id=113449